Fix extra margin in CSS

--- a/app/assets/stylesheets/partials/_invite_admin.scss
+++ b/app/assets/stylesheets/partials/_invite_admin.scss
@@ -20,6 +20,7 @@
     display: block;
     height: 100%;
     padding-left: 0px;
+    margin: 0px;
 
     &.collapsed {
       height: 0px;
